--- a/src/components/NavBar/_navbar.scss
+++ b/src/components/NavBar/_navbar.scss
@@ -326,6 +326,7 @@
                 max-width: 280px;
                 margin-left: auto;
                 margin-right: auto;
+                margin-bottom: 20px;
 
                 .search_input{
                     width: 260px;
