--- a/src/components/SiteWideSearchComponent/_site_wide_search_component.scss
+++ b/src/components/SiteWideSearchComponent/_site_wide_search_component.scss
@@ -1,6 +1,7 @@
 .SWSC_wrapper {
     max-width: 400px;
     height: 100%;
+    padding: 5px;
 
     .search_section_title {
         font-size: clamp(14px, 4vw, 24px);
